--- a/signup.html
+++ b/signup.html
@@ -303,49 +303,77 @@
 
         <!-- sign-section -->
         <section class="sign-section pt_110 pb_120">
-            <div class="pattern-layer" style="background-image: url(assets/images/shape/shape-25.png);"></div>
-            <div class="auto-container">
-                <div class="form-inner">
-                    <form method="post" action="signup.html">
-                        <div class="form-group">
-                            <label>Name</label>
-                            <input type="text" name="name" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Email</label>
-                            <input type="email" name="email" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Phone</label>
-                            <input type="text" name="phone" required>
-                        </div>
-                        <div class="form-group">
-                            <label>Password</label>
-                            <input type="password" name="password" required>
-                        </div>
-                        <div class="form-group message-btn">
-                            <button type="submit" class="theme-btn btn-one">Sign Up</button>
-                        </div>
-                        <span class="text">or</span>
-                        <ul class="social-links clearfix">
-                            <li>
-                                <a href="signup.html"><img src="assets/images/icons/icon-25.png" alt="">Continue with Google</a>
-                            </li>
-                            <li>
-                                <a href="signup.html"><img src="assets/images/icons/icon-26.png" alt="">Continue with Facebook</a>
-                            </li>
-                        </ul>
-                    </form>
-                    <div class="other-option">
-                        <div class="check-box">
-                            <input class="check" type="checkbox" id="checkbox1">
-                            <label for="checkbox1">Remember me</label>
-                        </div>
-                    </div>
-                    <div class="lower-text centred"><p>Already have an account? <a href="login.html">Login Here</a></p></div>
+    <div class="pattern-layer" style="background-image: url(assets/images/shape/shape-25.png);"></div>
+    <div class="auto-container">
+        <div class="form-inner">
+            <form id="registerForm">
+                
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input id="name" type="text" name="name" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input id="email" type="email" name="email" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input id="password" type="password" name="password" required>
+                </div>
+
+                <!-- ROLE FIELD -->
+                <div class="form-group">
+                    <label for="role">Role</label>
+                    <select id="role" name="role" required>
+                        <option value="applicant">Applicant</option>
+                        <option value="admin">Admin</option>
+                        <option value="job-provider">Job Provider</option>
+                    </select>
+                </div>
+
+                <!-- GENDER FIELD -->
+                <div class="form-group">
+                    <label for="gender">Gender</label>
+                    <select id="gender" name="gender">
+                        <option value="">Select Gender</option>
+                        <option value="male">Male</option>
+                        <option value="female">Female</option>
+                        <option value="other">Other</option>
+                    </select>
+                </div>
+
+                <div class="form-group message-btn">
+                    <button type="submit" class="theme-btn btn-one">Sign Up</button>
+                </div>
+
+                <span class="text">or</span>
+                <ul class="social-links clearfix">
+                    <li>
+                        <a href="#"><img src="assets/images/icons/icon-25.png" alt="">Continue with Google</a>
+                    </li>
+                    <li>
+                        <a href="#"><img src="assets/images/icons/icon-26.png" alt="">Continue with Facebook</a>
+                    </li>
+                </ul>
+            </form>
+
+            <div class="other-option">
+                <div class="check-box">
+                    <input class="check" type="checkbox" id="checkbox1">
+                    <label for="checkbox1">Remember me</label>
                 </div>
             </div>
-        </section>
+
+            <div class="lower-text centred">
+                <p>Already have an account? <a href="login.html">Login Here</a></p>
+            </div>
+
+        </div>
+    </div>
+</section>
+
         <!-- sign-section end -->
 
 
@@ -518,6 +546,44 @@
 
     <!-- main-js -->
     <script src="assets/js/script.js"></script>
+
+    <script>
+document.getElementById("registerForm").addEventListener("submit", async function (e) {
+    e.preventDefault(); // Prevent page reload
+
+    // Collect form values
+    const formData = {
+        name: document.getElementById("name").value.trim(),
+        email: document.getElementById("email").value.trim(),
+        password: document.getElementById("password").value.trim(),
+        role: document.getElementById("role").value,
+        gender: document.getElementById("gender").value
+    };
+
+    try {
+        const response = await fetch("http://localhost:3001/api/v1/users/register", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify(formData)
+        });
+
+        const data = await response.json();
+        console.log("REGISTER RESPONSE:", data);
+
+        if (response.ok) {
+            alert("🎉 Registration successful!");
+            window.location.href = "login.html"; // Redirect after success
+        } else {
+            alert(data.message || "❌ Registration failed!");
+        }
+    } catch (error) {
+        console.error("ERROR:", error);
+        alert("⚠️ Something went wrong! Try again.");
+    }
+});
+</script>
+
+
 
 </body><!-- End of .page_wrapper -->
 </html>
